# botsim

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  autogen.sh  build.sh  clean.sh  configure  configure.ac  vimc.sh
controller/: Controller.cpp  Makefile
doc/: tree.txt  uml.xmi
man/: botsim.1
simulator/: Makefile  Robot.cpp  RobotPart.cpp  View.cpp  World.h
simulator/environments/: Flat.cpp  Makefile
simulator/robots/: Bot1.cpp  Bot2.cpp  Makefile  Robots.h
simulator/views/: Makefile
src/: Makefile.am  Makefile.in  main.cpp
src/actuators/: motor.cc  motor.h
src/agents/: Controller.cpp  Controller.h
src/builtin_objects/: robudog_jd.cc  robudog_jd.h
src/builtin_parts/: dynamixel_ax12.cc  dynamixel_ax12.h  robudog_trunk.cc  robudog_trunk.h
src/controller/: Controller.cpp  Makefile.bak
src/controllers/: constant_signal.cc  constant_signal.h  robudog_controller.cc  robudog_controller.h  sinusoidal_signal.cc  sinusoidal_signal.h
src/core/: bullet_environment.cc  bullet_environment.h  object.cc  object.h  osg_environment.h  part.cc  part.h
src/joint_slots/: fixed_slot.cc  fixed_slot.h  hinge_slot.cc  hinge_slot.h  point_to_point_slot.cc  point_to_point_slot.h
src/joints/: fixed.cc  fixed.h  hinge.cc  hinge.h  point_to_point.cc  point_to_point.h
src/parts/: box.cc  box.h  sphere.cc  sphere.h
src/scenes/: CMakeLists.txt  robudog_optim.cc
src/sensors/: clock.cc  clock.h
src/simulator/: Environment.cpp  Environment.h  EnvironmentObject.cpp  EnvironmentObject.h  Robot.cpp  Robot.h  RobotPart.cpp  RobotPart.h  Servomotor.cpp  Servomotor.h  View.h  World.cpp  World.h
src/simulator/environments/: Environments.h  Flat.cpp  FlatEnvironment.cpp  FlatEnvironment.h
src/simulator/robots/: Bot1.cpp  Bot1.h  Bot2.cpp  Bot2.h  Robots.h  Robudog.cpp  Robudog.h
src/simulator/views/: OSGView.cpp  OSGView.h  Views.h
src/tools/: common_options_parser.cc  logger_ticks_parts_dat.cc  logger_ticks_parts_dat.h  logger_ticks_parts_json.cc  logger_ticks_parts_json.h  logger_time_steps_parts_dat.cc  logger_time_steps_parts_dat.h  logger_time_steps_parts_json.cc  logger_time_steps_parts_json.h  tools.h
utils/: optim_run_example.sh  robudog_test_param  saes.py
